# Vault

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build_vsix.cpp
.vault/: definition.md  demo.md  rules.md
build-mingw/: CMakeCache.txt  Makefile  cmake_install.cmake
build-mingw-debug/: CMakeCache.txt  Makefile  cmake_install.cmake  depend.svau  depends_test.svau
build-mingw-release/: CMakeCache.txt  Makefile  cmake_install.cmake
build-msvc/: CMakeCache.txt
idea/: concept.cpp  example.vau  vault_language.md
src/: ast.h  compiler.cpp  crypto.cpp  crypto.h  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  parser.cpp  parser.h  vault_app.cpp
src/examples/: cache.vau  depend.vau  depends_test.vau  secret.svau  secret.vau  secret.vsc  test.svau  test.vau
src/node/: builder.js  design.js  structure.js  vault.js
src/utils/: depend.cpp
vscode-extension/: README.md  extension.js  package.json  vault-language-support-0.0.1.vsix  vault-language-support-0.0.2.vsix  vault-language-support-0.0.3.vsix  vault-language-support-0.0.4.vsix  vault-language-support-0.0.5.vsix  vault-language-support-0.0.6.vsix
vscode-extension/syntaxes/: vault.tmLanguage.json
vscode-extension/tools/: file-polyfill.js
